# confman

./: .gitignore  Makefile  README.md  README_development.md  pyproject.toml
confman/: __init__.py  exceptions.py  manager.py  sources.py  utils.py  validation.py
tests/: test_config_and_manager.py  test_env_source.py  test_file_source.py  test_raw_source.py  test_utils.py
